# add-notice

./: Cargo.toml  README.md  deny.toml
.github/workflows/: add_notice.yaml  build_and_release.yaml  bump_version.yaml  cargo_semver_checks.yaml  mirror.yaml  msrv.yaml  pre_release.yaml  publish.yaml  update_attributions.yaml  weekly.yaml
attribution/: dependencies.toml  self.toml
src/: main.rs
